add function to controller update to user and blog

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO = "mongodb+srv://Omed0:iBoy@cluster0.ds9sb1c.mongodb.net/node-tuts?retryWrites=true&w=majority"
+MONGO_URL = "mongodb+srv://Omed0:iBoy@cluster0.ds9sb1c.mongodb.net/node-tuts?retryWrites=true&w=majority"
