--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "firstpractice",
   "version": "1.0.0",
   "description": "",
-  "main": "./app.js",
+  "main": "./server.js",
   "scripts": {
-    "start": "nodemon app",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
