add createAsyncThunk to post and auth slice and get all data from backend and localstorage

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 MONGO_URL = "mongodb+srv://badago:ouRrdxg6gdGQhCVS@learn.lfrcaij.mongodb.net/test?retryWrites=true&w=majority"
-
+MONGO_PORT = 3000
 JWT_SECRET = abc123
 
 # badago
