--- a/client/package.json
+++ b/client/package.json
@@ -13,8 +13,11 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
+    "babel-plugin-add-react-displayname": "^0.0.5",
     "framer-motion": "^10.12.16",
     "jwt-decode": "^3.1.2",
+    "logrocket": "^4.0.3",
+    "logrocket-react": "^5.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
